platform/demo-node-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-node-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-node-app
  template:
    metadata:
      labels:
        app: demo-node-app
    spec:
      containers:
        - name: web
          image: k3d-registry.localhost:5000/demo-node-app:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demo-node-app
  namespace: default
spec:
  selector:
    app: demo-node-app
  ports:
    - port: 80
      targetPort: 8080
